--- a/editor/vim/Makefile
+++ b/editor/vim/Makefile
@@ -1,2 +1,7 @@
 all:
 	(cd src; make)
+
+install: all
+	install -c -s -m 755 vim /usr/local/bin
+	-@mkdir -p /usr/local/doc
+	install -c -m 644 doc/vim.hlp /usr/local/doc
