--- a/editor/emacs/src/Makefile.in
+++ b/editor/emacs/src/Makefile.in
@@ -23,8 +23,13 @@ the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.  */
 
 /* Here are the things that we expect ../configure to edit. */
 srcdir=/usr/ports/editor/emacs/src
+vpath %.c $(srcdir)
+vpath %.h $(srcdir)
+vpath %.y $(srcdir)
+vpath %.l $(srcdir)
+vpath %.s $(srcdir)
+vpath %.in $(srcdir)
 VPATH=/usr/ports/editor/emacs/src
-CC=gcc
 CPP=gcc -E
 CFLAGS=-g -O 
 C_SWITCH_SYSTEM=
