--- a/devel/gdb/opcodes/Makefile
+++ b/devel/gdb/opcodes/Makefile
@@ -34,7 +34,7 @@ host_makefile_frag = ../bfd/config/i386bsd.mh
 
 srcdir = .
 
-prefix = /usr/local
+prefix = /usr/gnu
 
 exec_prefix = $(prefix)
 bindir = $(exec_prefix)/bin
