--- a/util/ss/Makefile
+++ b/util/ss/Makefile
@@ -1,5 +1,5 @@
 #############################################################################
-# Makefile $Revision: 1.2 $
+# Makefile $Revision: 1.3 $
 #
 # How to build the 'ss' package:
 # 1) Read this Makefile, keeping an eye out for anything that appears to
@@ -570,6 +570,11 @@ clean:
 
 spotless: clean
 	rm -f $(name) p$(name) 
+
+pkg: pkg_bin
+
+pkg_bin: install
+        pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST ss_bin
 
 #---------------------------------------------------------------------------
 #       end
