--- a/mail/mush/Makefile
+++ b/mail/mush/Makefile
@@ -71,3 +71,9 @@ install: mush
 	chmod 0644 $(LIBDIR)/cmd_help
 	cp Mushrc $(MRCDIR)/Mushrc
 	chmod 0644 $(MRCDIR)/Mushrc
+
+pkg: pkg_bin
+
+pkg_bin: install
+        pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST mush_bin
+
