add pkg target to texinfo

--- a/print/texinfo/Makefile
+++ b/print/texinfo/Makefile
@@ -158,5 +158,10 @@ DISTFILES: force
 
 force:
 
+pkg:    pkg_bin
+
+pkg_bin: install pkg/+DESC pkg/+ONELINE pkg/+PLIST
+        pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST texinfo-bin
+
 # Prevent GNU make v3 from overflowing arg limit on SysV.
 .NOEXPORT:
