Fix make all target to remove programs not included in the distribution.

--- a/x11/ezd/examples/makefile
+++ b/x11/ezd/examples/makefile
@@ -8,7 +8,8 @@ EZD = ../libezd.a
 .sc.o:
 	scc -c ${SCFLAGS} $*.sc
 
-all:	color dragon goodbye goodbye2 puzzle_in_c puzzle clock
+#all:	color dragon goodbye goodbye2 puzzle_in_c puzzle clock
+all:	dragon puzzle_in_c puzzle clock xc
 
 dragon:	${EZD} dragon.o
 	scc -o dragon ${SCFLAGS} dragon.o ${EZD} ${XLIB}
