Added a package for vile.

--- a/editor/vile/Makefile
+++ b/editor/vile/Makefile
@@ -383,6 +383,9 @@ install:
 	@echo Installing vile.hlp to $(DESTDIR) ; cp vile.hlp $(DESTDIR)
 	@chmod 0644 $(DESTDIR)/vile.hlp
 
+pkg:	install
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST vile_bin
+
 compr-shar: link.msc /tmp/vilevers
 	[ -d cshardir ] || mkdir cshardir
 #	add -a for archive headers, add -s pgf@cayman.com for submitted-by
@@ -544,7 +547,10 @@ random.$O:	glob.h
 vmalloc$O:	nevars.h
 
 # $Log: Makefile,v $
-# Revision 1.1  1994/02/22 06:34:41  jkh
+# Revision 1.2  1994/02/25 03:15:50  jkh
+# Added a package for vile.
+#
+# Revision 1.1  1994/02/22  06:34:41  jkh
 # Added a more kosher Makefile that doesn't use all kinds of peculiar
 # magic tricks to fail in interesting ways..
 #
