--- a/lang/bwbasic/Makefile.in
+++ b/lang/bwbasic/Makefile.in
@@ -62,6 +62,9 @@ $(OFILES):      $(HFILES)
 install: all
 	$(INSTALL_PROGRAM) bwbasic $(bindir)/bwbasic
 
+pkg:	install
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST bwbasic_bin
+
 uninstall:
 	rm -f $(bindir)/bwbasic
 
