Add a proper package

--- a/lang/tclX/Makefile.in
+++ b/lang/tclX/Makefile.in
@@ -13,7 +13,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: Makefile.in,v 1.1 1994/02/09 01:53:35 jkh Exp $
+# $Id: Makefile.in,v 1.2 1994/02/25 04:21:30 jkh Exp $
 #------------------------------------------------------------------------------
 #
 SHELL=/bin/sh
@@ -229,6 +229,9 @@ install: all TCLXINSTALL TCLXINSTALL-EXEC \
              ${TK_BUILD}MAYBE ${TK_BUILD}MAYBE-EXEC
 
 install-exec: all TCLXINSTALL-EXEC ${TK_BUILD}MAYBE-EXEC
+
+pkg:	install
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST tclX_bin
 
 TCLXINSTALL:
 	@echo ""
