Make a proper package for this..

--- a/lang/xlispstat/Makefile
+++ b/lang/xlispstat/Makefile
@@ -131,6 +131,9 @@ xlispstat: Makefile xlisp setup.shell
 	./setup.shell xlispstat ${XLISPLIB}
 	chmod a+x xlispstat
 
+pkg:	install
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST xlispstat_bin
+
 install: installexecs installlisp
 
 installexecs: xlispstat xlisp
