Remove -g and add -O to CFLAGS

--- a/devel/gdb/Makefile.in
+++ b/devel/gdb/Makefile.in
@@ -54,9 +54,9 @@ AS = as
 AR = ar
 AR_FLAGS = rc
 CC = cc
-CFLAGS = -g
+CFLAGS = -O
 CXX = gcc
-CXXFLAGS = -g -O
+CXXFLAGS = -O
 RANLIB = ranlib
 NM = nm
 MUNCH_NM = $(NM)
