1) Perl uses scrambler crypt() version from libc instead of proper one from -lcrypt (if exist) 2) We have now all sem/shm/msg stuff, add it to perl too

--- a/lang/perl/makefile
+++ b/lang/perl/makefile
@@ -1,11 +1,17 @@
-# : Makefile.SH,v 5501Revision: 1.1.1.1 5501Date: 1993/08/23 21:29:33 $
+# : Makefile.SH,v 16408Revision: 1.3 16408Date: 1993/12/30 01:32:17 $
 #
 # $Log: makefile,v $
-# Revision 1.1  1993/12/29 23:06:11  smace
-# add files that `make all' depends on
+# Revision 1.2  1994/03/05 01:28:20  ache
+# 1) Perl uses scrambler crypt() version from libc instead of proper one
+# from -lcrypt (if exist)
+# 2) We have now all sem/shm/msg stuff, add it to perl too
 #
-# Revision 1.1  1993/12/29  21:01:07  smace
-# Ran Configure
+# Revision 1.3  1993/12/30  01:32:17  smace
+# correct pkg target to make src packages build first
+#
+# Revision 1.2  1993/12/29  23:50:40  smace
+# 1. added pkg target and datafiles made perl install in /usr/gnu
+# 2. removed perly.h (build during make process)
 #
 # Revision 1.1.1.1  1993/08/23  21:29:33  nate
 # PERL!
@@ -48,7 +54,7 @@ mallocobj = malloc.o
 SLN = ln -s
 RMS = rm -f
 
-libs = -lm 
+libs = -lm -lcrypt
 
 public = perl taintperl suidperl
 
@@ -338,6 +344,15 @@ hlist:
 shlist:
 	echo $(sh) | tr ' ' '\012' >.shlist
 
+
+pkg:	pkg_src pkg_bin
+
+pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
+	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S perl_src
+
+pkg_bin: install pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B
+	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B perl_bin
+
 # AUTOMATICALLY GENERATED MAKE DEPENDENCIES--PUT NOTHING BELOW THIS LINE
 # If this runs make out of memory, delete /usr/include lines.
 array.o: 
@@ -572,7 +587,11 @@ doio.o: /usr/include/sys/cdefs.h
 doio.o: /usr/include/sys/fcntl.h
 doio.o: /usr/include/sys/file.h
 doio.o: /usr/include/sys/ioctl.h
+doio.o: /usr/include/sys/ipc.h
+doio.o: /usr/include/sys/msg.h
 doio.o: /usr/include/sys/param.h
+doio.o: /usr/include/sys/sem.h
+doio.o: /usr/include/sys/shm.h
 doio.o: /usr/include/sys/signal.h
 doio.o: /usr/include/sys/socket.h
 doio.o: /usr/include/sys/stat.h
