--- a/editor/emacs/Makefile.in
+++ b/editor/emacs/Makefile.in
@@ -32,7 +32,7 @@
 #      Still more severe - delete backup and autosave files, too.
 
 SHELL = /bin/sh
-#MAKE = make  # BSD doesn't have it as a default.
+# BSD doesn't have it as a default.
 
 # ==================== Things `configure' Might Edit ====================
 
@@ -65,7 +65,7 @@ libsrc_libs=@libsrc_libs@
 # The default location for installation.  Everything is placed in
 # subdirectories of this directory.  The default values for many of
 # the variables below are expressed in terms of this one, so you may
-# not need to change them.  This defaults to /usr/local.
+# not need to change them.  This defaults to /usr/gnu.
 prefix=@prefix@
 
 # Like `prefix', but used for architecture-specific files.
@@ -187,13 +187,7 @@ SUBDIR_MAKEFILES = lib-src/Makefile src/Makefile oldXMenu/Makefile
 COPYDIR = ${srcdir}/etc ${srcdir}/lisp
 COPYDESTS = ${etcdir} ${lispdir}
 
-all:	setup src/paths.h ${SUBDIR}
-
-pkg: install
-	pkg_create -d pkg/+DESC -f pkg/+CONTENTS -c pkg/+COMMENT emacs_bin
-
-setup:
-	@if [ -f src/config.h ]; then touch src/config.h; fi
+all:	src/paths.h ${SUBDIR}
 
 removenullpaths=sed -e 's/^://' -e 's/:$$//' -e 's/::/:/'
 
@@ -223,7 +217,7 @@ lib-src: FRC.lib-src
 
 ${SUBDIR}: ${SUBDIR_MAKEFILES} FRC
 	cd $@; $(MAKE) all $(MFLAGS) \
-		CC='${CC}' CFLAGS='${CFLAGS}'
+		CC='${CC}' CFLAGS='${CFLAGS}' MAKE='${MAKE}'
 
 Makefile: Makefile.in config.status
 	./config.status
@@ -292,7 +286,7 @@ do-install: mkdir
 	     if [ ! -f ${infodir}/dir ] && [ -f dir ]; then \
 	       ${INSTALL_DATA} dir ${infodir}/dir ; \
 	     fi ; \
-	     for f in cl* emacs* forms* gnus* info* sc* vip* ; do \
+	     for f in cl* emacs* forms* gnus* info* vip* ; do \
 	       ${INSTALL_DATA} $$f ${infodir}/$$f ; \
 	     done); \
 	else true; fi
